2001-04-18  Glynn Foster <glynn.foster@sun.COM>
	
	* save.c: Repeat what Richard did for main.c :)

2001-06-18  Richard Hult  <rhult@codefactory.se>

	* main.c: Add trailing NULL in g_strconcat call.

2001-06-15  Glynn Foster <glynn.foster@sun.com>

	* main.c: (set_lang), (main)
	  save.c: (set_session_name)
	Fixed some sort of env var inconsistancy now uses g_
	equivalent. Started the first stage of multi-session
	panel implementation. We now have GNOME_SESSION_NAME
	env var for any app to use if need be.

2001-06-11  Glynn Foster  <glynn.foster@sun.com>

	Removed some C duplicate variables - bug # 54780 from
	Dan McNichol. Just removed the extern ref's to the 
	ICE stuff from headers.h. Also renamed static variable
	in session-properties-capplet.c just to be pedantic :)

2001-06-11  Glynn Foster  <glynn.foster@sun.com>

	Right I've had enough of this stinking 'warner' thing
	so I've removed about 99% of the references in it. Also
	cleaned up the default.session to remove the Warner and
	Chooser sessions - they are totally pointless now. This 
	also [quite by accident I assure you :)] fixes a bug
	#54843]  
	Removed stuff from the following -
	* command.c: (command)
	* default.in
	* headers.h
	* manager.c: (no_response_warning), (new_client)
	* session-properties-capplet.c: (main)
	* session-properties.c: (main)

2001-06-05  Christian Rose  <menthos@menthos.com>

	* session-properties.desktop: Added Swedish translation.
	* session.desktop: Modified Swedish translation.

Thu May 31 00:43:59 2001  George Lebl <jirka@5z.com>

	* splash.c: make dark half transparent rectangle behind the text as
	  the shadow, this makes the text completely readable even with a
	  light splashscreen.c (like we have now)

2001-05-30  Glynn Foster  <glynn.foster@sun.com>

	* headers.h: Added FAILSAFE_SESSION #def - mostly useless
	* main.c: (main): Removed setting of CurrentSession - the 
	  hack that was put in for gdm which killed the concept of 