@@ -1,3 +1,9 @@
+2001-06-19  Glynn Foster <glynn.foster@sun.COM>
+
+	* gsm-client-list.c: (gsm_client_list_new):
+	Changes from David KAELBLING <drk@sgi.com> to fix
+	the build on IRIX [by way of Kjartan].
+
 2001-04-18  Glynn Foster <glynn.foster@sun.COM>
 	
 	* save.c: Repeat what Richard did for main.c :)
